Add fireworks animation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </nav>
     
     <section id="home">
+        <canvas id="fireworksAnimation"></canvas>
         <img src="assets/images/bg-titik.png" alt="" class="bg-1" width="250">
         <img src="assets/images/bg-titik.png" alt="" class="bg-2" width="250">
         <img src="assets/images/bg-3.png" alt="" class="bg-3">
@@ -128,7 +129,7 @@
                             <h3 class="mb-4 text-muted"><i class="fa fa-copy fa-2x"></i></h3>
                             <strong>Creating Concepts</strong>
                             <p class="text-muted mt-1">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sapiente fugit minus? Tenetur natus tempora error odit assumenda debitis amet.
+                                Creating concepts merupakan process pembuatan konsep dari jalannya aplikasi dengan mempertimbangkan UI/UX yang akan dibuat.
                             </p>
                         </div>
                     </div>
@@ -139,7 +140,7 @@
                             <h3 class="mb-4 text-muted"><i class="icon-layers fa-2x"></i></h3>
                             <strong>UI/UX Design</strong>
                             <p class="text-muted mt-1">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sapiente fugit minus? Tenetur natus tempora error odit assumenda debitis amet.
+                                UI/UX Design merupakan layanan dalam perancangan interface dari aplikasi yang akan dibuat.
                             </p>
                         </div>
                     </div>
@@ -150,7 +151,7 @@
                             <h3 class="mb-4 text-muted"><i class="icon-air-play fa-2x"></i></h3>
                             <strong>Web Customizing</strong>
                             <p class="text-muted mt-1">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sapiente fugit minus? Tenetur natus tempora error odit assumenda debitis amet.
+                                Web customizing merupakan sebuah layanan customisasi website atau pembuatan website baru sesuai dengan yang telah direncanakan
                             </p>
                         </div>
                     </div>
@@ -166,7 +167,7 @@
             <div class="row">
                 <div class="col-md-7 col-sm-6 col-12 pe-5 wow bounceInLeft" data-wow-duration=".8s" data-wow-delay=".5s">
                     <p class="text-muted text-justify">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur placeat recusandae numquam voluptatibus eius at necessitatibus? Consectetur eum numquam, eaque obcaecati, deleniti rem aliquam explicabo aspernatur provident ullam reprehenderit odit maiores optio nobis non delectus eveniet eos unde porro error!
+                        Setelah beberapa tahun saya mengenal tentang pemrograman, terdapat beberapa bahasa pemrograman yang saya pelajari beserta framework dari bahasa pemrograman tersebut. Berikut adalah skill yang saya miliki diantaranya :
                     </p>
                     <div class="row">
                         <div class="col-6">
