--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         </div>
     </section>
 
-    <section id="about" class="wow fadeInDown" data-wow-duration="1s" data-wow-offset="20" data-wow-delay=".5s">
+    <section id="about" class="wow fadeInDown" data-wow-duration="1s" data-wow-offset="50" data-wow-delay=".5s">
+        <div id="particles-js"></div>
         <div class="container">
             <div class="m-0 d-flex align-items-center justify-content-center">
                 <div class="col-md-5">
@@ -88,7 +89,7 @@
                         Hallo, Perkenalkan nama saya Mirza Dwiyan Saputra. Saya adalaha seorang Mahasiswa dari Politeknik Negeri Banyuwangi angkatan 2020. 
                     </p>
                     <div class="row">
-                        <div class="col-md-4 col-sm-6 col-12">
+                        <div class="col-md-4 col-sm-6 col-12 wow bounceInRight" data-wow-duration="1s" data-wow-offset="50" data-wow-delay=".5">
                             <div class="card shadow-sm">
                                 <div class="card-body text-center">
                                     <i class="fa fa-tablet fa-3x text-primary"></i>
@@ -96,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-12">
+                        <div class="col-md-4 col-sm-6 col-12 wow bounceInRight" data-wow-duration="1s" data-wow-offset="50" data-wow-delay="1.5">
                             <div class="card shadow-sm">
                                 <div class="card-body text-center">
                                     <i class="fa fa-desktop fa-3x text-warning"></i>
@@ -104,7 +105,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-12">
+                        <div class="col-md-4 col-sm-6 col-12 wow bounceInRight" data-wow-duration="1s" data-wow-offset="50" data-wow-delay="2.5">
                             <div class="card shadow-sm">
                                 <div class="card-body text-center">
                                     <i class="fa fa-diamond fa-3x text-danger"></i>
@@ -160,7 +161,7 @@
         </div>
     </section>
 
-    <section id="skills" class="py-5 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s" data-wow-offset="20">
+    <section id="skills" class="py-5 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s" data-wow-offset="50">
         <div class="container my-3">
             <div class="bubble"></div>
             <div class="title mb-5">My <strong>Skill.</strong></div>
@@ -235,12 +236,13 @@
         </div>
     </section>
 
-    <section id="portofolio" class="py-5">
+    <section id="portofolio" class="py-5 wow fadeInDown" data-wow-duration="1s" data-wow-offset="50" data-wow-delay=".5">
+        <canvas id="animationBalls"></canvas>
         <div class="container text-center my-3">
             <div class="bubble"></div>
             <div class="title mb-5">My <strong>Portofolio.</strong></div>
             <div class="row">
-                <div class="col-md-6 col-sm-6 col-12">
+                <div class="col-md-6 col-sm-6 col-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5">
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <img src="assets/images/Juara III LKS Banyuwangi.jpg" alt="" width="100%">
@@ -253,7 +255,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col-12">
+                <div class="col-md-6 col-sm-6 col-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5">
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <img src="assets/images/Peserta LKS Wilker II Jatim.jpg" alt="" width="100%">
@@ -266,7 +268,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col-12">
+                <div class="col-md-6 col-sm-6 col-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5">
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <img src="assets/images/SERTFIKAT SEMINAR KEPEMIMPINAN-1.jpg" alt="" width="100%">
@@ -279,7 +281,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col-12">
+                <div class="col-md-6 col-sm-6 col-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5">
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <img src="assets/images/Sertifikat Kuliah Tamu Indosat-1.jpg" alt="" width="100%">
@@ -292,7 +294,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col-12">
+                <div class="col-md-6 col-sm-6 col-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5">
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <img src="assets/images/Sertifikat Soft Skil Interpersonal Skill DTS-1.jpg" alt="" width="100%">
@@ -305,7 +307,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col-12">
+                <div class="col-md-6 col-sm-6 col-12 wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5">
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <img src="assets/images/Sertifikat Soft Skill Bahasa Inggris DTS-1.jpg" alt="" width="100%">
@@ -329,7 +331,7 @@
 
             <div class="d-flex align-items-center justify-content-center mb-5">
                 <div class="col-md-5 col-sm-6 col-12">
-                    <div class="col-10 mx-auto border" style="height: 400px;"></div>
+                    <div class="col-10 mx-auto  " id="objectThree" style="height: 400px;"></div>
                 </div>
                 <div class="col-md-7 col-sm-6 col-12">
                     <table cellpadding="8" class="text-start">
@@ -391,7 +393,7 @@
                             <div class="circle"></div>
                             <div class="description">
                                 <strong class="text-dark" style="font-size: 16px;font-family: serif">SDN 5 TEMBOKREJO</strong><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iste possimus architecto iusto non voluptas!
+                                Saya memulais ekolah dasar di SDN 5 Tembokrejo, disini saya belajar selama 6 tahun hingga akhirnya lulus
                             </div>
                         </div>
                         <div class="item">
@@ -399,7 +401,7 @@
                             <div class="circle"></div>
                             <div class="description">
                                 <strong class="text-dark" style="font-size: 16px;font-family: serif">MTs. Sunan Ampel Sumbersewu</strong><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iste possimus architecto iusto non voluptas!
+                                Setelah lulus sekolah dasar, saya melanjutkan sekolah di Madrasah Tsanawiyah (MTs) di  MTs Sunan Ampel Sumbersewu
                             </div>
                         </div>
                         <div class="item">
@@ -407,7 +409,7 @@
                             <div class="circle"></div>
                             <div class="description">
                                 <strong class="text-dark" style="font-size: 16px;font-family: serif">SMK 17 Agustus 1945 Muncar</strong><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iste possimus architecto iusto non voluptas!
+                                Setelah lulus dari MTs, saya melanjutkan sekolah di SMK 17 Agustus 1945 Muncar jurusan Rekayasa Perangkat Lunak. Disini saya mulai mengenal bahasa pemrograman.
                             </div>
                         </div>
                         <div class="item">
@@ -415,7 +417,7 @@
                             <div class="circle"></div>
                             <div class="description">
                                 <strong class="text-dark" style="font-size: 16px;font-family: serif">Politeknik Negeri Banyuwangi</strong><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iste possimus architecto iusto non voluptas!
+                                Saya melanjutkan kuliah di Politeknkik Negeri Poliwangi dengan mengambil prodi D3 Teknik Informatika.
                             </div>
                         </div>
                     </div>
@@ -425,11 +427,11 @@
                     <div class="resume">
                         <div class="line"></div>
                         <div class="item pt-3">
-                            <div class="title">2018</div>
+                            <div class="title">2019</div>
                             <div class="circle"></div>
                             <div class="description">
                                 <strong class="text-dark" style="font-size: 16px;font-family: serif">Freelance</strong><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iste possimus architecto iusto non voluptas!
+                                Setelah kurang lebih 1 tahun belajar bahasa pemrograman, lalu saya bekerja sebagai freelance sambil melajutkan pendidikan.
                             </div>
                         </div>
                         <div class="item">
@@ -437,7 +439,7 @@
                             <div class="circle"></div>
                             <div class="description">
                                 <strong class="text-dark" style="font-size: 16px;font-family: serif">CV. Web Media Solusi Digital</strong><br>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem iste possimus architecto iusto non voluptas!
+                                Setelah 1 tahun menjadi freelance, saya menemukan rekan dan membentuk tim hingga akhirnya menjadi sebuah CV.
                             </div>
                         </div>
                     </div>
@@ -621,7 +623,7 @@
                 <div class="col-md-4 col-12 px-4">
                     <!-- <h5 class="text-start">Contact Us</h5> -->
                     <p style="text-align: justify">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum est esse rerum reiciendis iusto voluptates perferendis tempora mollitia, facilis nesciunt quae sint nihil vero similique totam at architecto laboriosam laudantium dolore repellat beatae ea tenetur?
+                        Sejak kecil saya tinggal di Desa Tembokrejo, Kecamatan Muncar. Adapun kontak saya seperti nomor telepon / whatsapp, email, dan maps dari alamat saya sebagai berikut.
                     </p>
                     <table cellpadding="8" class="text-start">
                         <tr>
@@ -669,6 +671,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/particles.js"></script>
+    <script src="assets/js/three.js"></script>
     <script src="assets/js/custom.js"></script>
 </body>
 </html>
