--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="bg-light">
+    <div class="loader">
+        <div class="top-50">
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+                <div class="item"></div>
+            </div>
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="item-1"></div>
+                <div class="item-1"></div>
+                <div class="item-1"></div>
+                <div class="item-1"></div>
+                <div class="item-1"></div>
+            </div>
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="item-2"></div>
+                <div class="item-2"></div>
+                <div class="item-2"></div>
+                <div class="item-2"></div>
+                <div class="item-2"></div>
+            </div>
+        </div>
+    </div>
     <nav class="navbar navbar-light navbar-expand-lg">
         <div class="container">
             <a href="" class="navbar-brand text-italianno"><h2><strong class="text-primary"><b>C</b></strong>urriculum <strong class="text-primary"><b>V</b></strong>itae</h2></a>
