--- a/index.html
+++ b/index.html
@@ -349,16 +349,16 @@
         </div>
     </section>
 
-    <section id="resume" class="py-5">
+    <section id="resume" class="py-5 wow fadeInDown" data-wow-duration="1s" data-wow-offset="50" data-wow-delay=".5s">
         <div class="container text-center my-3">
             <div class="bubble"></div>
             <div class="title mb-5">My <strong>Resume.</strong></div>
 
             <div class="d-flex align-items-center justify-content-center mb-5">
-                <div class="col-md-5 col-sm-6 col-12">
+                <div class="col-md-5 col-sm-6 col-12  wow bounceInRight" data-wow-duration="1s" data-wow-offset="50">
                     <div class="col-10 mx-auto  " id="objectThree" style="height: 400px;"></div>
                 </div>
-                <div class="col-md-7 col-sm-6 col-12">
+                <div class="col-md-7 col-sm-6 col-12  wow bounceInLeft" data-wow-duration="1s" data-wow-offset="50">
                     <table cellpadding="8" class="text-start">
                         <tr>
                             <th class="nowrap">Nama</th>
@@ -409,7 +409,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-6 col-12 text-start p-5">
+                <div class="col-md-6 col-sm-6 col-12 text-start p-5 wow fadeInDown" data-wow-duration="1s" data-wow-offset="50" data-wow-delay="1s">
                     <h5 class="mb-5">Education</h5>
                     <div class="resume">
                         <div class="line"></div>
@@ -447,7 +447,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 col-12 text-start p-5">
+                <div class="col-md-6 col-sm-6 col-12 text-start p-5 wow fadeInDown" data-wow-duration="1s" data-wow-offset="50" data-wow-delay="1s">
                     <h5 class="mb-5">Experience</h5>
                     <div class="resume">
                         <div class="line"></div>
@@ -637,7 +637,7 @@
         </div>
     </section>
 
-    <section id="contact" class="py-5 bg-white">
+    <section id="contact" class="py-5 bg-white wow fadeInDown" data-wow-duration="1s" data-wow-offset="50" data-wow-delay=".5s">
         <div class="container text-center my-3">
             <div class="bubble"></div>
             <div class="title mb-5">My <strong>Contact.</strong></div>
